# learn_rust

advanced_traits/src/: associated_types.rs  fully_qualified_syntax.rs  main.rs  newtype_pattern.rs  supertraits.rs
automated_testing/src/: lib.rs
automated_testing/tests/: integration_test.rs
builder/src/: main.rs
collections/src/: main.rs
command/src/: main.rs
concurrency/src/: main.rs  share_memory_by_communicating_using_channel.rs  shared_state_concurrency.rs  spawning_threads.rs
custom_types_for_validation/: Cargo.toml
custom_types_for_validation/src/: main.rs
derivable_traits/src/: main.rs
error_handling/src/: main.rs
factory_method/src/: main.rs
free_generic/: Cargo.toml
free_generic/src/: main.rs
functions_and_closures/: Cargo.toml
functions_and_closures/src/: main.rs
graph_problems/: Cargo.toml
graph_problems/src/: lib.rs
gui/src/: lib.rs
hello_world/src/: main.rs
island_problem/: Cargo.toml
island_problem/src/: main.rs
learn_axum/: Cargo.toml
learn_axum/src/: main.rs
learn_enum/src/: main.rs
learn_hyper/: Cargo.toml
learn_hyper/src/: main.rs
learn_hyper_custom_app_factory/src/: main.rs
learn_modules/: Cargo.toml
learn_modules/src/: main.rs
learn_struct/src/: main.rs
learn_tower/: Cargo.toml
learn_tower/src/: app.rs  fakeserver.rs  http.rs  main.rs  main_backup.rs  util.rs
leetcode/maximum_product_subarray/: Cargo.toml
leetcode/shortest_path_in_binary_matrix/: Cargo.toml
lifetime/src/: main.rs
observer_pattern/src/: main.rs
rectangles_using_struct/: Cargo.toml
rust-protobuf/: Cargo.toml
(+34 files in other folders)
